# server/internal/apiserver/dto/auth.dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type LogoutResponse struct {
+	Success     bool   `json:"success"`
+	RedirectUrl string `json:"redirect_url"`
+}
