# server/internal/apiserver/model/user.model.go
@@ -10,7 +10,6 @@ type User struct {
 	ID        uuid.UUID `json:"id"`
 	FirstName string    `json:"first_name"`
 	LastName  string    `json:"last_name"`
-	Username  string    `json:"username"`
 	Email     string    `json:"email"`
 	AvatarUrl string    `json:"avatar_url"`
 	Bio       string    `json:"bio"`
