# server/internal/apiserver/repository/user.repository.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"fmt"
 
+	"github.com/google/uuid"
 	"pycrs.cz/what-it-do/internal/database"
 )
 
@@ -16,19 +17,18 @@ func NewUserRepository(q *database.Queries) *UserRepository {
 }
 
 func (r *UserRepository) UserExists(username string) bool {
-	_, err := r.q.GetUserByUsernameOrEmail(context.Background(), username)
+	_, err := r.q.GetUserByEmail(context.Background(), username)
 	return err == nil
 }
 
 func (r UserRepository) SaveUser(user database.User) (database.User, error) {
-	if user.Email == "" || user.Username == "" {
-		return database.User{}, fmt.Errorf("username and email are required")
+	if user.Email == "" {
+		return database.User{}, fmt.Errorf("email is required")
 	}
 
 	user, err := r.q.CreateUser(context.Background(), database.CreateUserParams{
 		FirstName:      user.FirstName,
 		LastName:       user.LastName,
-		Username:       user.Username,
 		Email:          user.Email,
 		HashedPassword: user.HashedPassword,
 		AvatarUrl:      user.AvatarUrl,
@@ -37,7 +37,14 @@ func (r UserRepository) SaveUser(user database.User) (database.User, error) {
 	return user, err
 }
 
-func (r *UserRepository) GetUserByUsername(username string) (database.User, error) {
-	return r.q.GetUserByUsernameOrEmail(context.Background(), username)
+func (r *UserRepository) GetUserByEmail(email string) (database.User, error) {
+	return r.q.GetUserByEmail(context.Background(), email)
 }
 
+func (r *UserRepository) GetUserByID(userID uuid.UUID) (*database.User, error) {
+	user, err := r.q.GetUserByID(context.Background(), userID)
+	if err != nil {
+		return nil, err
+	}
+	return &user, nil
+}
